# oFxCMakeTemplate

./: CMakeLists.txt  README.md
src/: main.cpp  ofApp.cpp  ofApp.h
